--- a/caa-experimentation-gui/src/main/resources/i18n/messages.properties
+++ b/caa-experimentation-gui/src/main/resources/i18n/messages.properties
@@ -38,7 +38,6 @@ graph.details.happy.vertices=Happy vertices
 graph.details.sad.vertices=Sad vertices
 graph.details.all.vertices=All vertices
 graph.details.all.edges=All edges
-graph.details.chart.title=Vertices types distribution
 graph.details.chart.data.happy=Happy ({0})
 graph.details.chart.data.sad=Sad ({0})
 graph.details.chart.data.other=Other ({0})
@@ -70,20 +69,21 @@ edges.table.column.0.sub.column.1=To
 edges.table.happy.tag=(happy)
 edges.table.sad.tag=(sad)
 edges.table.start.tag=(start)
-
 # Experiment results
 experiment.results.tab.title=Results ({0}) #{1}
-experiment.results.all.vertices.traversals=Overall vertices traversals
-experiment.results.happy.to.shortest.path.factor=Happy to Shortest Path Factor:
-experiment.results.vertices.traversals.per.generation=Vertices Traversals Per Generation
+experiment.results.all.vertices.traversals=Overall traversals
+experiment.results.happy.to.shortest.path.factor="Happy" to shortest path factor:
+experiment.results.edge.traversals.in.total=Edge traversals in total:
+experiment.results.vertices.traversals.per.generation=Traversals per generation
 experiment.results.generation=Generation:
 experiment.results.generation.end=Generation end:
 experiment.results.increments=Increments:
 experiment.results.traversed.edges=Traversed edges:
 experiment.results.traversed.vertices=Traversed vertices:
-experiment.results.generation.happiness.chart="Happy" vs "Sad" generation
+# experiment.results.generation.happiness.chart="Happy" vs "Sad" generations
+# experiment.results.vertices.traversal.chart.title=Vertices traversals
 experiment.results.vertices.traversal.chart.xAxis=Vertices
-experiment.results.vertices.traversal.chart.yAxis=Traversals
+experiment.results.vertices.traversal.chart.yAxis=Traversals per vertex
 experiment.results.generation.end.happy="Happy"
 experiment.results.generation.end.sad="Sad"
 experiment.results.generation.number=Generation #
